--- a/.github/workflows/dockerhub-push.yml
+++ b/.github/workflows/dockerhub-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker image
+name: Build and Push Docker Image
 
 on:
   push:
@@ -12,12 +12,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Logout from Docker Hub
+      run: docker logout
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
@@ -25,4 +28,3 @@ jobs:
         push: true
         provenance: false
         tags: carlajesusdesign/cesae-devops-my-page:latest
-        
